# Car-license-plate-recognition

./: Dockerfile  database.py  docker-compose.yml  main.py  pyproject.toml  settings.py
api/v1/routers/: cars.py
core/: config.py
models/: cars.py
schemas/: cars.py  error.py
utils/: db_context.py  operations.py
